@@ -1,3 +1,11 @@
+2002-08-21  Theodore A. Roth  <troth@verinet.com>
+
+	* doc/api/sfr.dox: Grammar cleanups.
+	* include/avr/sfr_defs.h: Make Marek's notes into dox.
+		Added compiler note to _BV().
+		Added note about switched arg order for outb()/outw().
+		Documented deprecated macros.
+
 2002-08-21  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
 	* doc/api/Makefile.am
